--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>class</title>
+  <title>dev</title>
 </head>
 <body style="background-color:powderblue;">
 <h1 style="color:red">The content of the document...... </h1>
